<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/your_pastimes"
            android:textSize="30sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/pastime_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/pastime_item" />


        <EditText
            android:id="@+id/unique_pastime"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_a_unique_pastime"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/add_pastime_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/add_pastime" />

    </LinearLayout>
</ScrollView>