<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/how_are_you_doing"
            android:textFontWeight="6"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ic_upset"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="4dp"
                android:src="@drawable/upset" />

            <ImageView
                android:id="@+id/ic_down"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="4dp"
                android:src="@drawable/down" />

            <ImageView
                android:id="@+id/ic_neutral"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="4dp"
                android:src="@drawable/neutral" />

            <ImageView
                android:id="@+id/ic_coping"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="4dp"
                android:src="@drawable/coping" />

            <ImageView
                android:id="@+id/ic_elated"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="4dp"
                android:src="@drawable/elated" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/what_have_you_done_lately"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/pastimes_checkbox_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/what_is_the_weather_like_right_now"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_sunny"
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="Sunny" />

            <RadioButton
                android:id="@+id/radio_cloudy"
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="Cloudy" />

            <RadioButton
                android:id="@+id/radio_rainy"
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="Rainy" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/is_there_anything_else_you_want_to_remember_about_this_moment"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/entry_notes"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/i_noticed_that"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/log_mood_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/record_my_mood"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>